force-app/main/default/objects/Portal_Patient_Registry__mdt/Portal_Patient_Registry__mdt.object-meta.xml
<CustomObject>
    <description>Canonical portal Username to Patient__c mapping. Survives manual edits to Portal_User__c or Email__c on the patient record.</description>
    <label>Portal Patient Registry</label>
    <pluralLabel>Portal Patient Registries</pluralLabel>
</CustomObject>