force-app/main/default/objects/Portal_Patient_Registry__mdt/fields/Patient_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Record_Name__c</fullName>
    <description>Exact Patient__c.Name to link for this portal login.</description>
    <label>Patient Record Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>