force-app/main/default/objects/Portal_Patient_Registry__mdt/fields/Portal_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Id__c</fullName>
    <description>18-char Salesforce User Id for the portal login. Used when Username or email change.</description>
    <label>Portal User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>