force-app/main/default/objects/Portal_Patient_Registry__mdt/fields/Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Portal_Username__c</fullName>
    <description>Salesforce User.Username for the portal login (e.g. demo.patient@hmsportal.test.hms).</description>
    <label>Portal Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>