force-app/main/default/objects/Portal_Patient_Registry__mdt/fields/Sync_Email_From_User__c.field-meta.xml
<CustomField>
    <fullName>Sync_Email_From_User__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, self-heal also writes the running user&apos;s email to Patient__c.Email__c.</description>
    <label>Sync Email From User</label>
    <type>Checkbox</type>
</CustomField>